Fix unit test error against SiteSettingVariablesAcquirer